fix toggling lightbox visibility

--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -49,7 +49,7 @@ li {
 		top: 0;
 	text-align: center;
 
-	&.show-microbox {
+	&.visible {
 		display: block;
 	}
 
